busybox-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox-stable-service
  namespace: default
spec:
  selector:
    app: busybox
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: busybox-canary-service
  namespace: default
spec:
  selector:
    app: busybox
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
