busybox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: busybox-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: busybox.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: busybox-stable-service
            port:
              number: 80
